- 이미지 업로드/다운로드 작업 완료

--- a/src/main/resources/templates/board/writing/write.html
+++ b/src/main/resources/templates/board/writing/write.html
@@ -53,7 +53,7 @@
 
                     <div class="button_row">
                         <div class="left_div">
-                            <label class="file_upload" for="file">이미지 업로드</label>
+                            <label class="file_upload" for="fileEntity">이미지 업로드</label>
                         </div>
                         <div class="right_div">
                             <label for="anonymous" class="checkbox_wrap">
@@ -63,7 +63,7 @@
                             <input type="submit" class="writing_completion" value="글 작성">
                         </div>
                     </div>
-                    <input id="file" class="file" type="file" multiple accept="*/*" name="file"/>
+                    <input id="fileEntity" class="fileEntity" type="fileEntity" multiple accept="*/*" name="fileEntity"/>
                 </div>
             </form>
         </div>
