--- a/src/main/resources/templates/board/writing/writetest.html
+++ b/src/main/resources/templates/board/writing/writetest.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <!-- 이미지는 별도의 처리가 필요할 수 있습니다. -->
-                <input id="image" class="image" type="file" accept="image/*" name="image"/>
+                <input id="image" class="image" type="fileEntity" accept="image/*" name="image"/>
             </div>
         </form>
     </div>
