--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,11 +8,11 @@
 <footer>
     <div class="footinner">
         <div class="footcategory">
-            <a href="/serviceagree">이용약관</a>
+            <a href="/serviceagreement">이용약관</a>
             <a href="/personal_info/privacy" style="font-weight:bolder">개인정보처리방침</a>
             <a href="/personal_info/youthpolicy">청소년보호정책</a>
             <a href="/personal_info/rules">커뮤니티이용규칙</a>
-            <a href="/inquire">문의사항</a>
+            <a href="javascript:void(0)">문의사항</a>
             <span class="copyright" style="font-weight:bolder">© Extend</span>
         </div>
         <div class="developer_div">
