--- a/src/main/resources/templates/fragments/header-after.html
+++ b/src/main/resources/templates/fragments/header-after.html
@@ -62,7 +62,7 @@
                         <a href="/mypage/mypage_main" class="main_category_name">
                             <div class="profile">
                                 <img src="/img_source/anonymous.png" alt="사진" class="profile_pic_alter">
-                                <div class="user_nickname">
+                                <div class="user_nickname" th:text="${loggedInMember.name}">
                                     최환규
                                 </div>
                             </div>
