--- a/src/main/resources/templates/loginMain.html
+++ b/src/main/resources/templates/loginMain.html
@@ -39,10 +39,10 @@
 </head>
 <body>
 <header th:if="${loggedIn}">
-    <header th:include="fragments/header-after.html"></header>
+    <header th:include="/fragments/header-after"></header>
 </header>
 <header th:unless="${loggedIn}">
-    <header th:include="fragments/header-before.html"></header>
+    <header th:include="/fragments/header-before"></header>
 </header>
 <div class="wrap_mainframe">
     <div class="mainframe">
@@ -79,40 +79,40 @@
                         <div class="title">
                             학과 공지사항
                         </div>
-                        <a href="board/department_board.html" class="more">
+                        <a href="board/department_board" class="more">
                             더보기
                         </a>
                     </div>
                     <div class="board_content">
                         <div class="board_post">
-                            아 오늘 시험 망했네
+                            2023학년도 2학기 휴학, 자퇴 안내 (2차)
                         </div>
                         <div class="post_time">
-                            03/24
+                            09/27
                         </div>
                     </div>
                     <div class="board_content">
                         <div class="board_post">
-                            난 라면먹고 잔다
+                            2023학년도 2학기 재학생 수강신청 안내
                         </div>
                         <div class="post_time">
-                            03/24
+                            08/17
                         </div>
                     </div>
                     <div class="board_content">
                         <div class="board_post">
-                            옆방 너무 시끄러움
+                            2023학년도 2학기 재학생 등록금 분할납부 안내
                         </div>
                         <div class="post_time">
-                            03/24
+                            08/11
                         </div>
                     </div>
                     <div class="board_content">
                         <div class="board_post">
-                            우리 축제에 누구옴?
+                            2023학년도 2학기 재학생 등록금 납부 안내
                         </div>
                         <div class="post_time">
-                            03/24
+                            08/11
                         </div>
                     </div>
                 </div>
@@ -120,44 +120,44 @@
 
             <div class="boardblock">
                 <div class="board_base">
-                    <div class="board_header">
-                        <div class="title" id="school_announcement">
+                    <div class="board_header" id="department_announcement">
+                        <div class="title">
                             학교 통합 공지사항
                         </div>
-                        <a href="board/school_integ_board.html" class="more">
+                        <a href="school_integ_board.html" class="more">
                             더보기
                         </a>
                     </div>
                     <div class="board_content">
                         <div class="board_post">
-                            아 오늘 시험 망했네
+                            [채용공고] 서일대학교 혁신지원사업단 전담직원 채용 공고
                         </div>
                         <div class="post_time">
-                            03/24
+                            09/25
                         </div>
                     </div>
                     <div class="board_content">
                         <div class="board_post">
-                            난 라면먹고 잔다
+                            2023년 대학도서관 평가를 위한 이용자 만족도조사 실시(학생대상)
                         </div>
                         <div class="post_time">
-                            03/24
+                            09/15
                         </div>
                     </div>
                     <div class="board_content">
                         <div class="board_post">
-                            옆방 너무 시끄러움
+                            [한국어교육원] 2023학년도 가을학기 교내 외국어 특강
                         </div>
                         <div class="post_time">
-                            03/24
+                            09/12
                         </div>
                     </div>
                     <div class="board_content">
                         <div class="board_post">
-                            우리 축제에 누구옴?
+                            [채용공고] 일학습병행공동훈련센터 직원 채용 공고
                         </div>
                         <div class="post_time">
-                            03/24
+                            09/07
                         </div>
                     </div>
                 </div>
@@ -176,9 +176,14 @@
                         </a>
                     </div>
                     <!-- 자유 게시판의 최근 게시글 4개를 반복하여 표시 -->
-                    <div class="board_content" th:each="board : ${recentFreeBoards}">
+                    <div th:if="${loggedIn}" class="board_content" th:each="board : ${recentFreeBoards}">
                         <div class="board_post" th:text="${board.title}"></div>
                         <div class="post_time" th:text="${board.formattedFinalDate}"></div>
+                    </div>
+                    <div th:unless="${loggedIn}" class="needlogin">
+                        <p>로그인을 해야 볼 수 있는 게시판입니다.</p>
+                        <br>
+                        <a href="/login" class="login_button">로그인</a>
                     </div>
                 </div>
             </div>
@@ -194,9 +199,14 @@
                         </a>
                     </div>
                     <!-- QnA 게시판의 최근 게시글 4개를 반복하여 표시 -->
-                    <div class="board_content" th:each="board : ${recentQnaBoards}">
+                    <div th:if="${loggedIn}" class="board_content" th:each="board : ${recentQnaBoards}">
                         <div class="board_post" th:text="${board.title}"></div>
                         <div class="post_time" th:text="${board.formattedFinalDate}"></div>
+                    </div>
+                    <div th:unless="${loggedIn}" class="needlogin">
+                        <p>로그인을 해야 볼 수 있는 게시판입니다.</p>
+                        <br>
+                        <a href="/login" class="login_button">로그인</a>
                     </div>
                 </div>
             </div>
@@ -212,9 +222,14 @@
                         </a>
                     </div>
                     <!-- 장터 게시판의 최근 게시글 4개를 반복하여 표시 -->
-                    <div class="board_content" th:each="board : ${recentMarketBoards}">
+                    <div th:if="${loggedIn}" class="board_content" th:each="board : ${recentMarketBoards}">
                         <div class="board_post" th:text="${board.title}"></div>
                         <div class="post_time" th:text="${board.formattedFinalDate}"></div>
+                    </div>
+                    <div th:unless="${loggedIn}" class="needlogin">
+                        <p>로그인을 해야 볼 수 있는 게시판입니다.</p>
+                        <br>
+                        <a href="/login" class="login_button">로그인</a>
                     </div>
                 </div>
             </div>
@@ -391,6 +406,6 @@
         </div>
     </div>
 </div>
-<footer th:include="/fragments/footer.html"></footer>
+<footer th:include="/fragments/footer"></footer>
 </body>
 </html>
