--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -50,7 +50,7 @@
             <div class="calendar">
                 <div class="calendar_title">
                     <div class="title">
-                        학과일정
+                        달력
                     </div>
                     <a href="javascript:void(0)" class="more">
                         더보기
@@ -79,7 +79,7 @@
                         <div class="title">
                             학과 공지사항
                         </div>
-                        <a href="board/department_board" class="more">
+                        <a href="/board/notice" class="more">
                             더보기
                         </a>
                     </div>
@@ -124,7 +124,7 @@
                         <div class="title">
                             학교 통합 공지사항
                         </div>
-                        <a href="school_integ_board.html" class="more">
+                        <a href="/board/notice" class="more">
                             더보기
                         </a>
                     </div>
@@ -241,7 +241,7 @@
                 <div class="title">
                     시간표
                 </div>
-                <a href="mypage/schedule.html" class="more">
+                <a href="/mypage/schedule" class="more">
                     더보기
                 </a>
             </div>
